# fixture3

./: .gitignore  AGENTS.md  Cargo.toml  README.md  clippy.toml  deny.toml  fixture3.yaml  goldencheck.yaml  guardrail3-rs.toml  release-plz.toml  rustfmt.toml
.github/workflows/: binary-release.yml  ci.yml
.plans/: 2026-05-13-150929-fixture3-architecture.md  2026-05-13-150929-fixture3-architecture.md.manifest.toml  2026-05-13-150929-goldencheck-architecture.md  2026-05-13-150929-goldencheck-architecture.md.manifest.toml  2026-05-13-175011-manifest-driven-check.md  2026-05-13-182528-readme-release-binstall.md  2026-05-13-212349-cli-version.md  2026-05-13-213039-frontload-cli-help.md  2026-05-13-215321-all-suites.md  2026-05-13-215321-all-suites.md.manifest.toml  2026-05-14-105749-fixture3-rename.md  2026-05-14-111202-binstall-only-install.md  2026-05-14-113743-feature-pipeline-fixtures.md  2026-05-14-113743-feature-pipeline-fixtures.md.manifest.toml  2026-05-14-120328-spec3-machine-checkable-specs.md  2026-05-14-120439-document-feature-pipeline.md  2026-05-14-122624-fake-project-verification.md  2026-05-14-122624-fake-project-verification.md.manifest.toml
.worklogs/: 2026-05-13-164655-initialize-fixture3.md  2026-05-13-164655-initialize-goldencheck.md  2026-05-13-165155-rename-fixture3.md  2026-05-13-165155-rename-goldencheck.md  2026-05-13-175839-manifest-driven-check.md  2026-05-13-182817-readme-release-binstall.md  2026-05-13-183252-publish-fixture3.md  2026-05-13-183252-publish-goldencheck.md  2026-05-13-211953-help-documentation.md  2026-05-13-212456-cli-version.md  2026-05-13-213207-frontload-cli-help.md  2026-05-13-220029-all-suites-local-release.md  2026-05-13-220612-github-release-docs.md  2026-05-14-110444-fixture3-rename.md  2026-05-14-111252-binstall-only-install.md  2026-05-14-115123-feature-pipeline-fixtures.md  2026-05-14-120443-spec3-plan.md  2026-05-14-120717-document-feature-pipeline.md  2026-05-14-122902-fake-project-verification.md
behavior/approved/self/: approved.meta.json  approved.normalized.json
behavior/fixtures/self/cases/approve-no-change/: fixture3.yaml  goldencheck.yaml  input.txt
behavior/fixtures/self/cases/approve-requires-change/: fixture3.yaml  goldencheck.yaml  input.txt
behavior/fixtures/self/cases/approve-with-change/: fixture3.yaml  goldencheck.yaml  input.txt
behavior/fixtures/self/cases/bad-exit/: fixture3.yaml  goldencheck.yaml  input.txt
behavior/fixtures/self/cases/bad-json/: fixture3.yaml  goldencheck.yaml
behavior/fixtures/self/cases/check-all-error/: fixture3.yaml  input-b.txt  (+1 more)
behavior/golden/self/: approved.meta.json  approved.normalized.json
crates/fixture3/: Cargo.toml
crates/fixture3-install/: Cargo.toml
crates/fixture3-install/src/: main.rs
crates/fixture3/src/: app.rs  args.rs  diff.rs  doctor.rs  error.rs  fixture.rs  lib.rs  main.rs  manifest.rs  metadata.rs  normalize.rs  scaffold.rs  selection.rs  storage.rs
crates/goldencheck/: Cargo.toml
crates/goldencheck-install/: Cargo.toml
crates/goldencheck-install/src/: main.rs
crates/goldencheck/src/: app.rs  args.rs  command.rs  fs.rs  git.rs  lib.rs  main.rs  storage.rs
examples/fake-project/: fixture3.yaml
examples/fake-project/behavior/changes/: fake-change.md
examples/fake-project/docs/features/: parsing.md  review.md
examples/fake-project/scripts/: fake-app.sh
scripts/: self-case-bad-json.py  self-case-emit-json.py  self-case-exit-7.py  self-case-normalize-json.py  self-check-harness.py  verify-all.sh  verify-fake-project.sh  verify-feature-pipeline.py  verify-layer-1-tree.sh  verify-layer-2-forbidden.sh  verify-layer-3-config.sh  verify-layer-4-modules.sh  verify-layer-5-static.sh  verify-layer-6-fixture3.sh  verify-layer-6-goldencheck.sh  verify-layer-7-cli.sh  verify-manifest.py
(+80 files in other folders)
