[workspace]
members = ["crates/goldencheck"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
repository = "https://github.com/websmasher/goldencheck"
publish = false

[workspace.lints.rust]
warnings = "deny"
unsafe_code = "forbid"
dead_code = "deny"
unused_results = "deny"
unused_crate_dependencies = "deny"
missing_debug_implementations = "warn"
unreachable_pub = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unimplemented = "deny"
todo = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
indexing_slicing = "deny"
string_slice = "deny"
arithmetic_side_effects = "deny"
shadow_unrelated = "deny"
missing_assert_message = "deny"
partial_pub_fields = "deny"
str_to_string = "deny"
implicit_clone = "deny"
as_conversions = "deny"
float_cmp = "deny"
lossy_float_literal = "deny"
wildcard_enum_match_arm = "deny"
rest_pat_in_fully_bound_structs = "deny"
large_stack_arrays = "deny"
needless_pass_by_value = "deny"
redundant_else = "deny"
large_futures = "deny"
semicolon_if_nothing_returned = "deny"
redundant_closure_for_method_calls = "deny"
map_unwrap_or = "deny"
verbose_file_reads = "deny"
disallowed_methods = "deny"
disallowed_types = "deny"
disallowed_macros = "deny"
redundant_pub_crate = "allow"
