[package]
name = "goldencheck"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
description = "Install stub for the goldencheck CLI; use cargo binstall for the real binary"
license.workspace = true
repository.workspace = true
publish = true
readme = "../../README.md"
include = ["src/**", "Cargo.toml", "../../README.md", "../../LICENSE*"]
keywords = ["golden", "fixtures", "snapshot", "cli"]
categories = ["command-line-utilities", "development-tools::testing"]

[[bin]]
name = "goldencheck"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/goldencheck-{ target }.tar.gz"
bin-dir = "goldencheck{ binary-ext }"
pkg-fmt = "tgz"

[dependencies]

[lints]
workspace = true
