[package]
name = "goldencheck"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "CLI for golden fixture behavior checks"
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
glob = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_norway = "0.9.42"
sha2 = "0.10.9"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting"] }

[features]
default = ["cli"]
cli = []

[lints]
workspace = true
